[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrospatial-data-cube"
version = "0.1.0"
description = "Multi-sensor underwater survey data cube builder (MBES, SSS, SBP, MAG)"
requires-python = ">=3.11"

dependencies = [
    "numpy>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "rasterio>=1.3",
    "pyproj>=3.5",
    "netCDF4>=1.6",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "ppigrf>=2.0",
    "xarray>=2024.0",
    "plotly>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]