[project]
name = "hydrospatial-data-cube"
version = "0.1.0"
description = "Multi-sensor underwater survey data cube builder (MBES, SSS, SBP, MAG)"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "rasterio>=1.3",
    "pyproj>=3.5",
    "netCDF4>=1.6",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "ppigrf>=2.0",
    "xarray>=2024.0",
    "fastapi",
    "uvicorn",
    "localtileserver",
    "pyyaml",
    "contextily>=1.7.0",
    "filterpy>=1.4.5",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
